зробив тести дорбити дизщайн почати базу даних

--- a/school-canteen-project/pages/index.html
+++ b/school-canteen-project/pages/index.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Шкільна їдальня</title>
-
     <!-- Підключаємо стилі -->
-    <link rel="stylesheet" href="C:\Users\Admin\Documents\GitHub\site_competition\school-canteen-project\css\styles.css"> <!-- Підключення основних стилів -->
+    <link rel="stylesheet" href="../css/styles.css"> <!-- Підключення основних стилів -->
 </head>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 
 <body>
     <!-- Хедер -->
+   
+    
     <header>
         <div class="header-container">
-            <div class="logo">
-                <img src="assets/images/logo.png" alt="Логотип шкільної їдальні">
-            </div>
+            
             <nav>
                 <ul>
                     <li><a href="./index.html">Головна</a></li>
                     <li><a href="./menu.html">Меню</a></li>
-                    <li><a href="./tests.html">Тести</a></li>
+                    <li><a href="./tests/index.html">Тести</a></li>
                     <li><a href="./games.html">Ігри</a></li>
                     <li><a href="./about.html">Про нас</a></li>      
                     <li><a href="./contacts.html">Контакти</a></li>
@@ -34,7 +34,7 @@
     <div class="hero">
         <h1>Ласкаво просимо до шкільної їдальні!</h1>
         <p>Вибирайте страви, заробляйте зірочки, проходьте тести та грайте в ігри!</p>
-        <a href="#" class="cta-button">Дізнатися більше</a>
+        <a href="./about.html" class="cta-button">Дізнатися більше</a>
     </div>
 
     <!-- Футер -->
