--- a/school-canteen-project/pages/contacts.html
+++ b/school-canteen-project/pages/contacts.html
@@ -1,28 +1,152 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакти</title>
+    <title>Контакти - Шкільна їдальня</title>
     <link rel="stylesheet" href="C:\Users\Admin\Documents\GitHub\site_competition\school-canteen-project\css\styles.css">
+    <style>
+        /* Оновлені стилі для сторінки Контакти */
+        
+        body {
+            font-family: 'Orbitron', sans-serif;
+            background: linear-gradient(120deg, #74ebd5, #acb6e5);
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background: rgba(0, 0, 0, 0.6);
+            padding: 10px 0;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: #ff9a9e;
+            text-shadow: 0 0 8px #ff9a9e;
+        }
+
+        .contact-section {
+            max-width: 600px;
+            margin: 50px auto;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            animation: fadeInUp 1s ease-out;
+        }
+
+        .contact-section h1 {
+            font-size: 2.5em;
+            color: #fff;
+            text-shadow: 0 0 10px #fff, 0 0 20px #66a6ff;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            font-size: 1.2em;
+            color: #fff;
+        }
+
+        .form-group input, .form-group textarea {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            font-size: 1em;
+            transition: background 0.3s ease;
+        }
+
+        .form-group input:focus, .form-group textarea:focus {
+            background: rgba(255, 255, 255, 0.4);
+            outline: none;
+        }
+
+        button[type="submit"] {
+            padding: 10px 20px;
+            background: #ff9a9e;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            font-size: 1.2em;
+            cursor: pointer;
+            transition: background 0.3s ease, transform 0.2s ease;
+        }
+
+        button[type="submit"]:hover {
+            background: #ff6b6b;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        footer {
+            background: rgba(0, 0, 0, 0.6);
+            padding: 20px;
+            text-align: center;
+            color: white;
+            font-size: 1em;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 </head>
+
 <body>
     <header>
-        <div class="header-container">
-            <div class="logo">
-                <img src="../assets/images/logo.png" alt="Логотип шкільної їдальні">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Головна</a></li>
-                    <li><a href="menu.html">Меню</a></li>
-                    <li><a href="tests.html">Тести</a></li>
-                    <li><a href="games.html">Ігри</a></li>
-                    <li><a href="about.html">Про нас</a></li>
-                    <li><a href="contacts.html">Контакти</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Головна</a></li>
+                <li><a href="menu.html">Меню</a></li>
+                <li><a href="tests.html">Тести</a></li>
+                <li><a href="games.html">Ігри</a></li>
+                <li><a href="about.html">Про нас</a></li>
+                <li><a href="contacts.html">Контакти</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -51,7 +175,6 @@
             <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
         </div>
     </footer>
-
-    <script src="../js/script.js"></script>
 </body>
+
 </html>
