--- a/school-canteen-project/pages/index.html
+++ b/school-canteen-project/pages/index.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html lang="uk">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Шкільна їдальня</title>
     <!-- Підключаємо стилі -->
-    <link rel="stylesheet" href="../css/styles.css"> <!-- Підключення основних стилів -->
-</head>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css" />
+    <!-- Підключення основних стилів -->
+  </head>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap"
+    rel="stylesheet"
+  />
 
-<body>
+  <body>
     <!-- Хедер -->
-   
-    
+
     <header>
-        <div class="header-container">
-            
-            <nav>
-                <ul>
-                    <li><a href="./index.html">Головна</a></li>
-                    <li><a href="./menu.html">Меню</a></li>
-                    <li><a href="./tests/index.html">Тести</a></li>
-                    <li><a href="./games.html">Ігри</a></li>
-                    <li><a href="./about.html">Про нас</a></li>      
-                    <li><a href="./contacts.html">Контакти</a></li>
-                </ul>
-            </nav>
-        </div>
+      <div class="header-container">
+        <nav>
+          <ul>
+            <li><a href="./index.html">Головна</a></li>
+            <li><a href="./menu.html">Меню</a></li>
+            <li><a href="../pages/tests/index.html">Тести</a></li>
+            <li><a href="./games.html">Ігри</a></li>
+            <li><a href="./about.html">Про нас</a></li>
+            <li><a href="./contacts.html">Контакти</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <!-- Основний контент -->
     <div class="hero">
-        <h1>Ласкаво просимо до шкільної їдальні!</h1>
-        <p>Вибирайте страви, заробляйте зірочки, проходьте тести та грайте в ігри!</p>
-        <a href="./about.html" class="cta-button">Дізнатися більше</a>
+      <h1>Ласкаво просимо до шкільної їдальні!</h1>
+      <p>
+        Вибирайте страви, заробляйте зірочки, проходьте тести та грайте в ігри!
+      </p>
+      <a href="./about.html" class="cta-button">Дізнатися більше</a>
     </div>
 
     <!-- Футер -->
     <footer>
-        <div class="footer-left">
-            <h2>Шкільна їдальня</h2>
-        </div>
+      <div class="footer-left">
+        <h2>Шкільна їдальня</h2>
+      </div>
 
-        <div class="footer-right">
-            <a href="mailto:schoolcanteen@example.com">Зв'язатися з нами</a>
-            <a href="#">Політика конфіденційності</a>
-        </div>
+      <div class="footer-right">
+        <a href="mailto:schoolcanteen@example.com">Зв'язатися з нами</a>
+        <a href="#">Політика конфіденційності</a>
+      </div>
 
-        <div class="footer-info">
-            <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
-        </div>
+      <div class="footer-info">
+        <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
+      </div>
     </footer>
 
     <!-- Підключення скриптів -->
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
