налаштовано струкутуру папок

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script>
         // Функція для перенаправлення на index.html з урахуванням шляху
         function goToCanteen() {
-            window.location.href = 'C:/Users/24g_chvv/Documents/GitHub/site_competition/school-canteen-project/pages/index.html'; // Абсолютний шлях до файлу
+            window.location.href = 'pages/index.html'; // Абсолютний шлях до файлу
         }
     </script>
 
